# stm32_cmake_template

./: CMakeLists.txt  _gdbinit  readme.md  stm32.cmake  stm32_flash.ld.in
src/: main.c  main.h  semihosting.c  semihosting.h  stm32f10x_it.c
